force-app/src/objects/ffirule__IntegrationRuleTargetLineItemTest__c.object
<CustomObject>
    <fields>
        <fullName>ffirule__ABooleanField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A Boolean Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffirule__ADateField__c</fullName>
        <label>A Date Field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffirule__ALookupField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A Lookup Field</label>
        <referenceTo>ffirule__IntegrationRuleLineLookupTest__c</referenceTo>
        <relationshipLabel>Integration Rule Target Line Item Tests</relationshipLabel>
        <relationshipName>Integration_RuleTargetLineItemTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffirule__ANumberField__c</fullName>
        <label>A Number Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffirule__ATextField__c</fullName>
        <label>A Text Field</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__AnotherNumberField__c</fullName>
        <label>Another Number Field</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffirule__AnotherStatus__c</fullName>
        <formula>TEXT(ffirule__IntegrationRuleTargetTest__r.ffirule__AnotherStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Another Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__AnotherTextField__c</fullName>
        <label>Another Text Field</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__IntegrationRuleSourceLineItemTest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClickLink Source Line Item Test</label>
        <referenceTo>ffirule__IntegrationRuleSourceLineItemTest__c</referenceTo>
        <relationshipLabel>ClickLink Target Line Item Tests</relationshipLabel>
        <relationshipName>IntegrationRuleTargetLineItemTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffirule__IntegrationRuleTargetTest__c</fullName>
        <label>ClickLink Target Test</label>
        <referenceTo>ffirule__IntegrationRuleTargetTest__c</referenceTo>
        <relationshipLabel>ClickLink Target Line Item Tests</relationshipLabel>
        <relationshipName>IntegrationRuleTargetLineItemTests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffirule__Number16__c</fullName>
        <label>Number16</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffirule__Status__c</fullName>
        <formula>TEXT(ffirule__IntegrationRuleTargetTest__r.ffirule__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__Syncing__c</fullName>
        <formula>IF(ffirule__IntegrationRuleTargetTest__r.ffirule__Syncing__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Syncing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ClickLink Target Line Item Test</label>
    <nameField>
        <displayFormat>IRTSTTL-{00000000}</displayFormat>
        <label>ClickLink Target Line Item Test N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClickLink Target Line Item Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>